fixed spacing and overlapping bug

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body,
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Clash Display', 'Times New Roman', Times, serif;
+  font-family: "Clash Display", "Times New Roman", Times, serif;
   font-weight: 100;
 }
 
@@ -14,8 +14,8 @@ html {
 }
 
 :root {
-  --primary: #FFFFE3;
-  --secondary: #10100E;
+  --primary: #ffffe3;
+  --secondary: #10100e;
 }
 
 body {
@@ -81,7 +81,6 @@ body::-webkit-scrollbar {
   height: 4px;
   background-color: var(--primary);
   /* Color of the main cursor dot */
-
 }
 
 .cursor-follow {
@@ -117,7 +116,7 @@ body::-webkit-scrollbar {
 
 .hamburger-bar::before,
 .hamburger-bar::after {
-  content: '';
+  content: "";
   position: absolute;
   height: 1px;
   background-color: var(--primary);
@@ -154,7 +153,7 @@ body::-webkit-scrollbar {
 
 #hero-wrapper {
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -194,7 +193,7 @@ body::-webkit-scrollbar {
 }
 
 .spacer {
-  height: 100vh;
+  height: 100svh;
 }
 
 .scroll-text h1 {
@@ -289,13 +288,18 @@ body::-webkit-scrollbar {
 }
 
 .about-section-pin-wrapper {
-  height: 110vh;
+  height: 120svh;
   width: 100vw;
-  overflow: hidden;
+}
+
+.abt-spacer {
+  background-color: transparent;
+  height: 200px;
+  width: 100vw;
 }
 
 .about-section-pin {
-  height: 100vh;
+  height: 100svh;
   width: 100vw;
   display: flex;
   align-items: center;
@@ -303,7 +307,6 @@ body::-webkit-scrollbar {
   flex-direction: column;
   color: var(--primary);
   font-size: 3em;
-  
 }
 
 .about-img {
@@ -326,16 +329,15 @@ body::-webkit-scrollbar {
 
 .about-section-story-wrapper {
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
 }
 
 .about-section-story {
   width: 70%;
-  height: 60vh;
+  height: 60svh;
   position: relative;
 }
 
@@ -363,7 +365,7 @@ body::-webkit-scrollbar {
   margin: 0 auto;
   height: 20%;
   display: grid;
-  place-items:end;
+  place-items: end;
 }
 
 .about-section-story-main-content {
@@ -397,12 +399,11 @@ body::-webkit-scrollbar {
 .experience-section-wrapper {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   background-color: var(--primary);
 }
 
 @media only screen and (min-width: 800px) {
-
   body,
   *,
   *::after,
@@ -434,11 +435,11 @@ body::-webkit-scrollbar {
   }
 
   .about-section-pin-wrapper {
-    height: 240vh;
+    height: 240svh;
   }
 
   .about-section-pin {
-    height: 200vh;
+    height: 200svh;
   }
 
   .about-text {
@@ -466,7 +467,7 @@ body::-webkit-scrollbar {
   .about-section-story-main-title {
     font-size: 32px;
   }
-  
+
   .about-section-story-main-content {
     height: 50%;
     font-size: 30px;
